Update documentation to install master branches.

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -16,52 +16,52 @@ else
   BUILD_FOLDER=build-rel
 endif
 
-hpp-fcl_branch=devel
+hpp-fcl_branch=master
 hpp-fcl_repository=${HPP_REPO}
 
-hpp-util_branch=devel
+hpp-util_branch=master
 hpp-util_repository=${HPP_REPO}
 
-hpp-model_branch=devel
+hpp-model_branch=master
 hpp-model_repository=${HPP_REPO}
 
-hpp-model-urdf_branch=devel
+hpp-model-urdf_branch=master
 hpp-model-urdf_repository=${HPP_REPO}
 
-hpp-statistics_branch=devel
+hpp-statistics_branch=master
 hpp-statistics_repository=${HPP_REPO}
 
-hpp-core_branch=devel
+hpp-core_branch=master
 hpp-core_repository=${HPP_REPO}
 
-hpp-template-corba_branch=devel
+hpp-template-corba_branch=master
 hpp-template-corba_repository=${LAAS_REPO}
 
-hpp-corbaserver_branch=devel
+hpp-corbaserver_branch=master
 hpp-corbaserver_repository=${HPP_REPO}
 
 qpOASES_branch=master
 qpOASES_repository=${HPP_REPO}
 
-hpp-constraints_branch=devel
+hpp-constraints_branch=master
 hpp-constraints_repository=${HPP_REPO}
 
-hpp-walkgen_branch=devel
+hpp-walkgen_branch=master
 hpp-walkgen_repository=${HPP_REPO}
 
-hpp-wholebody-step_branch=devel
+hpp-wholebody-step_branch=master
 hpp-wholebody-step_repository=${HPP_REPO}
 
-hpp-wholebody-step-corba_branch=devel
+hpp-wholebody-step-corba_branch=master
 hpp-wholebody-step-corba_repository=${HPP_REPO}
 
-test-hpp_branch=devel
+test-hpp_branch=master
 test-hpp_repository=${HPP_REPO}
 
 hrp2_branch=groovy
 hrp2_repository=${JRL_REPO}
 
-hpp-hrp2_branch=devel
+hpp-hrp2_branch=master
 hpp-hrp2_repository=${HPP_REPO}
 
 robot_capsule_urdf_branch=groovy
@@ -70,16 +70,17 @@ robot_capsule_urdf_repository=${LAAS_REPO}
 robot_model_py_branch=groovy
 robot_model_py_repository=${LAAS_REPO}
 
-hpp-doc_branch=devel
+hpp-doc_branch=master
 hpp-doc_repository=${HPP_REPO}
 
-hpp-manipulation_branch=devel
+hpp-manipulation_branch=master
 hpp-manipulation_repository=${HPP_REPO}
 
-hpp-manipulation-urdf_branch=devel
+
+hpp-manipulation-urdf_branch=master
 hpp-manipulation-urdf_repository=${HPP_REPO}
 
-hpp-manipulation-corba_branch=devel
+hpp-manipulation-corba_branch=master
 hpp-manipulation-corba_repository=${HPP_REPO}
 
 robot_state_chain_publisher_branch=master
@@ -88,7 +89,7 @@ robot_state_chain_publisher_repository=${HPP_REPO}
 iai_maps_branch=master
 iai_maps_repository=${HPP_REPO}
 
-hpp_tutorial_branch=devel
+hpp_tutorial_branch=master
 hpp_tutorial_repository=${HPP_REPO}
 
 hpp_benchmark_branch=master
@@ -97,17 +98,29 @@ hpp_benchmark_repository=${HPP_REPO}
 collada-dom_branch=master
 collada-dom_repository=${HPP_REPO}
 
-gepetto-viewer_branch=devel
+gepetto-viewer_branch=master
 gepetto-viewer_repository=${HPP_REPO}
 
-gepetto-viewer-corba_branch=devel
+gepetto-viewer-corba_branch=master
 gepetto-viewer-corba_repository=${HPP_REPO}
 
-hpp-gepetto-viewer_branch=devel
+hpp-gepetto-viewer_branch=master
 hpp-gepetto-viewer_repository=${HPP_REPO}
 
-hpp-gui_branch=devel
+hpp-gui_branch=master
 hpp-gui_repository=${HPP_REPO}
+
+qgv_branch=master
+qgv_repository=${HPP_REPO}
+
+hpp-plot_branch=master
+hpp-plot_repository=${HPP_REPO}
+
+hpp-environments_branch=master
+hpp-environments_repository=${HPP_REPO}
+
+hpp-baxter_branch=master
+hpp-baxter_repository=${HPP_REPO}
 
 OpenSceneGraph-3.4.0_extra_flags= -DDESIRED_QT_VERSION=4 -DCOLLADA_DYNAMIC_LIBRARY=${DEVEL_DIR}/install/lib/libcollada14dom.so -DCOLLADA_INCLUDE_DIR=${DEVEL_DIR}/install/include/collada-dom -DLIB_POSTFIX=""
 
@@ -120,7 +133,8 @@ roboptim-trajectory-3.1_extra_flags= -DCMAKE_BUILD_TYPE=Release
 qpOASES_extra_flags= -DCMAKE_BUILD_TYPE=Release
 
 all: doxygen-Release_1_8_10.install hpp_tutorial.install \
-	hpp-gepetto-viewer.install
+	hpp-gepetto-viewer.install hpp-manipulation-corba.install \
+	hpp-plot.install hpp-gui.install
 	${MAKE} hpp-doc.install
 
 # source $DEVEL_DIR/install/setup.bash before installing hrp2.
@@ -181,8 +195,15 @@ gepetto-viewer-corba.configure.dep: gepetto-viewer.install \
 hpp-gepetto-viewer.configure.dep: gepetto-viewer-corba.install \
 	hpp-corbaserver.install \
 	hpp-gepetto-viewer.checkout
+qgv.configure.dep: qgv.checkout
+hpp-plot.configure.dep: hpp-manipulation-corba.install \
+	hpp-wholebody-step-corba \
+	hpp-corbaserver.install \
+	qgv.install \
+	hpp-plot.checkout
 hpp-gui.configure.dep: gepetto-viewer-corba.install \
 	hpp-corbaserver.install hpp-gui.checkout
+hpp-baxter.configure.dep: hpp-corbaserver.install hpp-baxter.checkout
 
 status:
 	@for child_dir in $$(ls ${SRC_DIR}); do \
