Remove dependency to hpp-wholebody-step from hpp-manipulation

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -169,7 +169,7 @@ hpp-constraints.configure.dep: qpOASES.install hpp-model.install \
 hpp-wholebody-step.configure.dep: hpp-constraints.install hpp-walkgen.install \
 	hpp-wholebody-step.checkout
 hpp-manipulation.configure.dep: hpp-core.install hpp-constraints.install \
-	hpp-wholebody-step.install hpp-manipulation.checkout
+	hpp-manipulation.checkout
 hpp-manipulation-urdf.configure.dep:hpp-manipulation.install \
 	hpp-model-urdf.install hpp-manipulation-urdf.checkout
 hpp-corbaserver.configure.dep: hpp-model-urdf.install hpp-core.install \
