--- a/doc/algorithm.html.in
+++ b/doc/algorithm.html.in
@@ -33,16 +33,9 @@
 	</tr>
 	<tr>
 	  <td>
-	    <a href="@HPPMODEL_LINK@">hpp-model</a>
+	    <a href="@PINOCCHIO_LINK@">pinocchio</a>
 	  </td>
 	  <td>implementation of kinematic chain with dynamic computations,</td>
-	</tr>
-	<tr>
-	  <td>
-	    <a href="@HPPMODELURDF_LINK@">hpp-model-urdf</a>
-	  </td>
-	  <td>construction of robots and objects by parsing urdf/srdf files,
-	  </td>
 	</tr>
       </table>
 
